# cyclesgym

./: .gitconfig  .gitignore  AUTHORS  LICENSE  README.md  TODO.md  crop_planning_baselines.py  experiments.md  install_cycles.py  setup.cfg  setup.py  time_env.py
cyclesgym/: WIP_cycles_reinit.py  __init__.py  compare_envs.py  cycles_config.py  dummy_policies.py  env.py  informed_policy.py  managers.py  partial_obs_experiment.py  paths.py  plot_training_curve.py  ppo_sweep_config.yaml  pretrain_utils.py  pricing_utils.py  train_agent.py  train_informed_policy.py  utils.py
cyclesgym/envs/: __init__.py  common.py  constrainers.py  corn.py  corn_multiyear.py  corn_old.py  crop_plannig.py  observers.py  (+5 more)
documents/: 0_installation.md  1_introduction.md  2_interface.md  3.1_predefined_envs.md  3.2_custom_weather_and_soil.md  3.3_custom_spaces_and_rewards.md  3.4_default_operations.md  3_logic.md  4_examples.md  6_contributions.md  experiments.md  manual.md  predefined_envs.md
experiments/: corn_soil_refined.py  euler_outer_script.sh  euler_script.sh  eval.py  expert.py  policy_visualization.py  sweep.yaml  table.csv  tables.py  train.py  train.sh  train_setup_euler.sh
notebooks/: build_custom_environment.ipynb  corn_env_observation_space.ipynb  cylesNN_create_datapoint_example.ipynb  dqn_policy_comparison.ipynb  example_corn_fertilization_env.ipynb  training_rl_agent.ipynb
work_in_progress/: WIP_cycles_reinit.py  partial_obs_experiment.py  plot_training_curve.py  ppo_sweep_config.yaml  pretrain_utils.py  sweep.yaml  time_env.py  train_agent.py  train_informed_policy.py
(+146 files in other folders)
