[metadata]
name = cyclesgym
version = 0.0.1
author = Matteo Turchetta
author_email = matteo.turchetta@ethz.ch
description = Open AI gym interface to the cycles crop simulator
long_description = file: README.md
long_description_content_type = text/markdown
url =

[options]
packages = cyclesgym
install_requires =
    requests
    python_version >= "3.10"
    gym
    pandas
    matplotlib
    ipykernel
    pyglet